[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Scene_Generator.gd" type="Script" id=1]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://resources/ui_font_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/ui_font_8.tres" type="DynamicFont" id=4]

[node name="Scene_Generator" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 48.0, 112.0, 352.0, 320.0 ],
"_edit_vertical_guides_": [ 48.0, 464.0, 256.0 ]
}

[node name="Background" type="Polygon2D" parent="."]
position = Vector2( -16, -16 )
color = Color( 0, 0.670588, 0.670588, 1 )
polygon = PoolVector2Array( 528, 16, 528, 400, 16, 400, 16, 16 )

[node name="UI" type="Control" parent="."]
margin_right = 512.0
margin_bottom = 384.0

[node name="Caption" type="Label" parent="UI"]
margin_left = 48.0
margin_top = 48.0
margin_right = 464.0
margin_bottom = 112.0
rect_clip_content = true
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Свой уровень"
align = 1
valign = 1
clip_text = true

[node name="PlayButton" type="Button" parent="UI"]
margin_left = 48.0
margin_top = 320.0
margin_right = 240.0
margin_bottom = 352.0
theme = ExtResource( 2 )
text = "Играть"

[node name="BackToMenuButton" type="Button" parent="UI"]
margin_left = 272.0
margin_top = 320.0
margin_right = 464.0
margin_bottom = 352.0
theme = ExtResource( 2 )
text = "Назад"

[node name="WaterCaptionLabel" type="Label" parent="UI"]
margin_left = 48.0
margin_top = 128.0
margin_right = 464.0
margin_bottom = 144.0
theme = ExtResource( 2 )
text = "Настройка количества ВОДЫ:"
valign = 1
clip_text = true

[node name="RepeatnessLabel" type="Label" parent="UI"]
margin_left = 80.0
margin_top = 160.0
margin_right = 192.0
margin_bottom = 176.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Повторяемость"
valign = 1
clip_text = true

[node name="Repeatness" type="SpinBox" parent="UI"]
margin_left = 224.0
margin_top = 160.0
margin_right = 432.0
margin_bottom = 176.0
theme = ExtResource( 2 )
value = 9.0
rounded = true

[node name="SizeLabel" type="Label" parent="UI"]
margin_left = 80.0
margin_top = 192.0
margin_right = 192.0
margin_bottom = 208.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Размер кисти"
valign = 1
clip_text = true

[node name="Size" type="SpinBox" parent="UI"]
margin_left = 224.0
margin_top = 192.0
margin_right = 432.0
margin_bottom = 208.0
theme = ExtResource( 2 )
max_value = 10.0
value = 8.0
rounded = true

[node name="FoodCaptionLabel" type="Label" parent="UI"]
margin_left = 48.0
margin_top = 240.0
margin_right = 464.0
margin_bottom = 256.0
theme = ExtResource( 2 )
text = "Настройка количества ЕДЫ:"
valign = 1
clip_text = true

[node name="HungerLabel" type="Label" parent="UI"]
margin_left = 80.0
margin_top = 272.0
margin_right = 192.0
margin_bottom = 288.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Нужно съесть"
valign = 1
clip_text = true

[node name="Hunger" type="SpinBox" parent="UI"]
margin_left = 224.0
margin_top = 272.0
margin_right = 432.0
margin_bottom = 288.0
theme = ExtResource( 2 )
min_value = 1.0
max_value = 1000.0
value = 10.0
rounded = true

[connection signal="pressed" from="UI/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="UI/BackToMenuButton" to="." method="_on_BackToMenuButton_pressed"]
